--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -54,7 +54,7 @@ article
       overflow: hidden;
       overflow-wrap: break-word;
     .icon
-      color: #258fb8;
+      color: #5BC0DE;
   .post .icon:before 
     content: '\f15c';
   .comment .icon:before 
