--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -17,6 +17,8 @@ if (page.widgets && page.widgets.theme == false)
 <%- _partial('_modules/partial/head_end') -%>
 </head>
 <body>
+  <header class="header">
+  <div id="banner"></div>
   <%- _partial('_modules/partial/body_start') -%>
   <%if (UserConfig.GTM_ID){ -%>
   <!-- Google Tag Manager -->
@@ -30,11 +32,14 @@ if (page.widgets && page.widgets.theme == false)
   <!-- End Google Tag Manager -->
   <%} -%>
   <header id="header" class="container"><%- partial('_partial/header',{__: hexo.__('menu')}) %></header>
-  <div id='content' class="container">
-     <div class="page-header-wrapper">
+  <div class="container">
+<div class="page-header-wrapper">
       <!--[if lt IE 9]><div class="alert alert-warning alert-dismissable"><button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button><strong>提示:</strong>您的浏览器版本太低了,建议升级到 <strong><%-link_to('http://windows.microsoft.com/zh-cn/internet-explorer/download-ie','IE9')%></strong> 以上,本站使用<a href="https://www.google.com/intl/zh-CN/chrome/">Chrome浏览器</a>可以获得最好的显示效果.</div><![endif]-->
       <div class="page-header"><h1><%- config.title %> <small><%- config.subtitle %></small></h1></div>
      </div>
+  </div>
+  </header>
+  <div id='content' class="container">
      <div class="row">
        <div id="main-col" <%if (sidebar) {%>class="alignleft col-sx-12 col-sm-8 col-md-9 col-lg-9"<%}%>>
       <%- UserConfig.load_widgets('header',page) %>
