--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -20,3 +20,9 @@ line-height = 1.6em
 #footer-info
   line-height: line-height
   font-size: 0.85em
+
+#main-nav
+  background-color:#000
+
+.dropdown-menu
+  background-color:#222
