--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,7 +1,4 @@
 // Header
-logo-size = 40px
-subtitle-size = 16px
-banner-height = 300px
 banner-url = "img/banner.jpg"
 
 #banner
@@ -15,4 +12,4 @@ banner-url = "img/banner.jpg"
   z-index: -1000
 
 h1
-  color:#FFFFFF
+  color:#999
