--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -7,7 +7,7 @@ banner-url = "img/banner.jpg"
   left: 0
   width: 100%
   height: 100%
-  background: url(banner-url) center #000
+  background: url(banner-url) center
   background-size: cover
   z-index: -1000
 
